package PizzaStoreV3.ingredients.clams;

public class FreshClams extends Clams {
    public String toString() {
        return "Fresh Clams";
    }
}
