package PizzaStoreV3.ingredients.doughs;

public class Dough {
    public String toString() {
        return "Dough";
    }
}
