package PizzaStoreV3.ingredients.veggies;

public class BlackOlives extends Veggies {
    public String toString() {
        return "Black Olives";
    }
}
