package PizzaStoreV3.ingredients.veggies;

public class Spinach extends Veggies {
    public String toString() {
        return "Spinach";
    }
}
