package PizzaStoreV3.ingredients.cheeses;

public class Cheese {
    public String toString() {
        return "Cheese";
    }
}
