package PizzaStoreV3.ingredients.clams;

public class Clams {
    public String toString() {
        return "Clams";
    }
}
