package PizzaStoreV3.ingredients.doughs;

public class ThickCrustDough extends Dough {
    public String toString() {
        return "Thick Crust Dough";
    }
}
