package PizzaStoreV3.ingredients.doughs;

public class ThinCrustDough extends Dough {
    public String toString() {
        return "Thin Crust Dough";
    }
}
