package PizzaStoreV3.ingredients.pepperoni;

public class Pepperoni {
    public String toString() {
        return "Pepperoni";
    }
}
