package PizzaStoreV3.ingredients.sauces;

public class MarinaraSauce extends Sauce {
    public String toString() {
        return "Marinara Sauce";
    }
}
