package PizzaStoreV3.ingredients.sauces;

public class Sauce {
    public String toString() {
        return "Sauce";
    }
}
