package PizzaStoreV3.ingredients.veggies;

public class Eggplant extends Veggies {
    public String toString() {
        return "Eggplant";
    }
}
