package PizzaStoreV3.ingredients.veggies;

public class Garlic extends Veggies {
    public String toString() {
        return "Garlic";
    }
}
