package PizzaStoreV3.ingredients.veggies;

public class Mushroom extends Veggies {
    public String toString() {
        return "Mushroom";
    }
}
