package PizzaStoreV3.ingredients.veggies;

public class Onion extends Veggies {
    public String toString() {
        return "Onion";
    }
}
