package PizzaStoreV3.ingredients.veggies;

public class RedPepper extends Veggies {
    public String toString() {
        return "Red Pepper";
    }
}
