package PizzaStoreV3.ingredients.veggies;

public class Veggies {
    public String toString() {
        return "Veggies";
    }
}
