' Generated by UML Generator
' Encoded: rLOxRzim4DxzAmXqSM3OwEmXI9iqHOOy40S5Yg03Gx4oOOaKA2fedAI_lNn99AL8PE4iMIppxhlZFNYFarf0BfgocDKxGYl8OGbG0UlwYn2SF3G2No16DsIFmUVPbcGO8C9HWMSpZG8tkAemPvJSaFqUWkSP07y9pJdE2ARY72B1-DCQQEv5dox1owNyMOHQviaAZfHmnR6q6y-Frk2HaMpssjfsMi3o8BCw1OTR11zgmIK4sB0vioWiyHfiPBHfhiuPQ_Bj6fofZphNi44Ae3xg_8ZpdE1w3NwOFug6jXZN4dIglveYJPSOvO56L6s4rovbdPzzUoNf0Uw2Csf4m6P__6EDnPLqO-xxuh5popxo_5m8PlvxL9SvxSTXkNCgtkizcO0VP9MduhsiqZ9tk1Pdd3nYRTZYMLQr8EWLb93GEUHvtSRu_jT0mTLFhM8ZhpBYdn37K5WhnLFbfrGJnnwqKx5WFCDyGaFYBUrp80ZcRCfC8d2Pfc0GNcEmKQQhJiMuBJzBrzMdNwejGqithqmnkjAp75kTYcN_tlzotAu65Tylo5QlgbkjLXTmFrSVr0T21UQ_8SBWusT27ut1KvtidEDwcunbUqmJmTyXBmYAuxuM4Esk2zaQ4fJUuio480wreOm3BvjwonahuyXDHIX4spZmMvvN1QGYZhocXD4uhCjxWf4owcsKaWJq-ut3xcIBsftoHlRnP07wF_XRbJ18cIcFE3uLTybaANDS531LGbTkWc8ept8XJOJV54rvnqeeCJ61tjAwNBuSsuanu1oFJNItN7hYFd5KqW5CQtDdqzBCcIsNtORd4BQtEOZfIjwTNGVpToZVn80yQgI_wtZI8NbKEbWfdBW-XypLgWlzMyJXvEzh6oBUbXuEczNgPJox4SasTt6SoMaSPpCR1xQF8exqtqBqUlsEHjUBgLXD2BLXceIO24r2R70cCMrS9a4k9DFtkQgQSYlgLDob18UIt8awuoqYkeHQgbivFB9TBZIbDSDV90A6Mne2SZVt0sexumDYDyy3gfdTeNHl-9fcq0MXFqCrswIgDoqzJcykcYYOv0n6My0CnfFcsAJt1f77Ei4qQyhY7m
' URL: http://www.plantuml.com/plantuml/uml/rLOxRzim4DxzAmXqSM3OwEmXI9iqHOOy40S5Yg03Gx4oOOaKA2fedAI_lNn99AL8PE4iMIppxhlZFNYFarf0BfgocDKxGYl8OGbG0UlwYn2SF3G2No16DsIFmUVPbcGO8C9HWMSpZG8tkAemPvJSaFqUWkSP07y9pJdE2ARY72B1-DCQQEv5dox1owNyMOHQviaAZfHmnR6q6y-Frk2HaMpssjfsMi3o8BCw1OTR11zgmIK4sB0vioWiyHfiPBHfhiuPQ_Bj6fofZphNi44Ae3xg_8ZpdE1w3NwOFug6jXZN4dIglveYJPSOvO56L6s4rovbdPzzUoNf0Uw2Csf4m6P__6EDnPLqO-xxuh5popxo_5m8PlvxL9SvxSTXkNCgtkizcO0VP9MduhsiqZ9tk1Pdd3nYRTZYMLQr8EWLb93GEUHvtSRu_jT0mTLFhM8ZhpBYdn37K5WhnLFbfrGJnnwqKx5WFCDyGaFYBUrp80ZcRCfC8d2Pfc0GNcEmKQQhJiMuBJzBrzMdNwejGqithqmnkjAp75kTYcN_tlzotAu65Tylo5QlgbkjLXTmFrSVr0T21UQ_8SBWusT27ut1KvtidEDwcunbUqmJmTyXBmYAuxuM4Esk2zaQ4fJUuio480wreOm3BvjwonahuyXDHIX4spZmMvvN1QGYZhocXD4uhCjxWf4owcsKaWJq-ut3xcIBsftoHlRnP07wF_XRbJ18cIcFE3uLTybaANDS531LGbTkWc8ept8XJOJV54rvnqeeCJ61tjAwNBuSsuanu1oFJNItN7hYFd5KqW5CQtDdqzBCcIsNtORd4BQtEOZfIjwTNGVpToZVn80yQgI_wtZI8NbKEbWfdBW-XypLgWlzMyJXvEzh6oBUbXuEczNgPJox4SasTt6SoMaSPpCR1xQF8exqtqBqUlsEHjUBgLXD2BLXceIO24r2R70cCMrS9a4k9DFtkQgQSYlgLDob18UIt8awuoqYkeHQgbivFB9TBZIbDSDV90A6Mne2SZVt0sexumDYDyy3gfdTeNHl-9fcq0MXFqCrswIgDoqzJcykcYYOv0n6My0CnfFcsAJt1f77Ei4qQyhY7m
' Generated on: 2025-12-07T20:26:19.229412

@startuml
skinparam classAttributeIconSize 0
hide circle

class PepperoniPizza {
  ~ingredientFactory: PizzaIngredientFactory
  --
  +PepperoniPizza(ingredientFactory: PizzaIngredientFactory)
  +prepare(): void
}

class ClamPizza {
  ~ingredientFactory: PizzaIngredientFactory
  --
  +ClamPizza(ingredientFactory: PizzaIngredientFactory)
  +prepare(): void
}

abstract class Pizza {
  ~name: String
  ~dough: Dough
  ~sauce: Sauce
  ~veggies: Veggies
  ~cheese: Cheese
  ~clams: Clams
  ~pepperoni: Pepperoni
  --
  +prepare(): void
  +bake(): void
  +cut(): void
  +box(): void
  +setName(name: String): void
  +getName(): String
  +toString(): String
}

class CheesePizza {
  ~ingredientFactory: PizzaIngredientFactory
  --
  +CheesePizza(ingredientFactory: PizzaIngredientFactory)
  +prepare(): void
}

class VeggiePizza {
  ~ingredientFactory: PizzaIngredientFactory
  --
  +VeggiePizza(ingredientFactory: PizzaIngredientFactory)
  +prepare(): void
}

class PizzaTestDrive {
  +{static} main(args: String[]): void
}

class NYPizzaStore {
  #createPizza(type: String): Pizza
}

abstract class PizzaStore {
  +orderPizza(type: String): Pizza
  #createPizza(type: String): Pizza
}

class ChicagoPizzaStore {
  #createPizza(item: String): Pizza
}

class ChicagoPizzaIngredientFactory {
  +createDough(): Dough
  +createSauce(): Sauce
  +createCheese(): Cheese
  +createVeggies(): Veggies[]
  +createPepperoni(): Pepperoni
  +createClams(): Clams
}

class NYPizzaIngredientFactory {
  +createDough(): Dough
  +createSauce(): Sauce
  +createCheese(): Cheese
  +createVeggies(): Veggies[]
  +createPepperoni(): Pepperoni
  +createClams(): Clams
}

interface PizzaIngredientFactory {
  +createDough(): Dough
  +createSauce(): Sauce
  +createCheese(): Cheese
  +createVeggies(): Veggies[]
  +createPepperoni(): Pepperoni
  +createClams(): Clams
}

class Clams {
  +toString(): String
}

class FreshClams {
  +toString(): String
}

class FrozenClams {
  +toString(): String
}

class Garlic {
  +toString(): String
}

class BlackOlives {
  +toString(): String
}

class RedPepper {
  +toString(): String
}

class Veggies {
  +toString(): String
}

class Mushroom {
  +toString(): String
}

class Spinach {
  +toString(): String
}

class Eggplant {
  +toString(): String
}

class Onion {
  +toString(): String
}

class Pepperoni {
  +toString(): String
}

class SlicedPepperoni {
  +toString(): String
}

class Dough {
  +toString(): String
}

class ThickCrustDough {
  +toString(): String
}

class ThinCrustDough {
  +toString(): String
}

class ReggianoCheese {
  +toString(): String
}

class Cheese {
  +toString(): String
}

class MozzarellaCheese {
  +toString(): String
}

class Sauce {
  +toString(): String
}

class MarinaraSauce {
  +toString(): String
}

class PlumTomatoSauce {
  +toString(): String
}

PepperoniPizza --|> Pizza
PepperoniPizza --> PizzaIngredientFactory
ClamPizza --|> Pizza
ClamPizza --> PizzaIngredientFactory
Pizza --> Dough
Pizza --> Sauce
Pizza o-- Veggies
Pizza --> Cheese
Pizza o-- Clams
Pizza --> Pepperoni
CheesePizza --|> Pizza
CheesePizza --> PizzaIngredientFactory
VeggiePizza --|> Pizza
VeggiePizza --> PizzaIngredientFactory
NYPizzaStore --|> PizzaStore
NYPizzaStore ..> Pizza
PizzaStore ..> Pizza
ChicagoPizzaStore --|> PizzaStore
ChicagoPizzaStore ..> Pizza
ChicagoPizzaIngredientFactory ..|> PizzaIngredientFactory
ChicagoPizzaIngredientFactory ..> Dough
ChicagoPizzaIngredientFactory ..> Sauce
ChicagoPizzaIngredientFactory ..> Cheese
ChicagoPizzaIngredientFactory ..> Veggies
ChicagoPizzaIngredientFactory ..> Pepperoni
ChicagoPizzaIngredientFactory ..> Clams
NYPizzaIngredientFactory ..|> PizzaIngredientFactory
NYPizzaIngredientFactory ..> Dough
NYPizzaIngredientFactory ..> Sauce
NYPizzaIngredientFactory ..> Cheese
NYPizzaIngredientFactory ..> Veggies
NYPizzaIngredientFactory ..> Pepperoni
NYPizzaIngredientFactory ..> Clams
PizzaIngredientFactory ..> Dough
PizzaIngredientFactory ..> Sauce
PizzaIngredientFactory ..> Cheese
PizzaIngredientFactory ..> Veggies
PizzaIngredientFactory ..> Pepperoni
PizzaIngredientFactory ..> Clams
FreshClams --|> Clams
FrozenClams --|> Clams
Garlic --|> Veggies
BlackOlives --|> Veggies
RedPepper --|> Veggies
Mushroom --|> Veggies
Spinach --|> Veggies
Eggplant --|> Veggies
Onion --|> Veggies
SlicedPepperoni --|> Pepperoni
ThickCrustDough --|> Dough
ThinCrustDough --|> Dough
ReggianoCheese --|> Cheese
MozzarellaCheese --|> Cheese
MarinaraSauce --|> Sauce
PlumTomatoSauce --|> Sauce
@enduml